k8s/prod-serviceb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-b
  namespace: dev-serviceb
spec:
  selector:
    app: service-b
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
