k8s/prod-serviceb/deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress
  namespace: prod-serviceb
spec:
  podSelector: {}
  policyTypes:
    - Ingress
